--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,16 +3,64 @@ name: 'My First GitHub Actions Workflow' # 워크플로우 이름
 
 on: push # [ 'push', 'pull_request' ] # 수행할 이벤트
 
+env: # 환경 변수
+  WORKFLOW_LEVEL: 'This value comes from the workflow level'
+
 jobs: # 어떤 일을 할지를 정의
   first-job: # 이거 하나하나가 하나의 빌드 서버라고 보면 됨
     name: 'First Job'
     runs-on: ubuntu-latest
+    env:
+      JOB_LEVEL_1: 'This value comes from the job level'
     steps:
       - name: 'Say Hello World on step 1'
         shell: bash
+        env:
+          STEP_LEVEL_1: 'This value comes from the step 1'
         run: |
           echo "Hello World from Step 1"
+          echo "Workflow Level: $WORKFLOW_LEVEL"
+          echo "Job Level 1: $JOB_LEVEL_1"
+          echo "Job Level 2: $JOB_LEVEL_2"
+          echo "Step 1: $STEP_LEVEL_1"
+          echo "Step 2: $STEP_LEVEL_2"
       - name: 'Say Lorem Ipsum on step 2'
         shell: pwsh
+        env:
+          STEP_LEVEL_2: 'This value comes from the step 2'
         run: |
           echo "Lorem Ipsum from Step 2"
+          echo "Workflow Level: $env:WORKFLOW_LEVEL"
+          echo "Job Level 1: $env:JOB_LEVEL_1"
+          echo "Job Level 2: $env:JOB_LEVEL_2"
+          echo "Step 1: $env:STEP_LEVEL_1"
+          echo "Step 2: $env:STEP_LEVEL_2"
+          
+  second-job: 
+    name: 'First Job'
+    runs-on: ubuntu-latest
+    env:
+      JOB_LEVEL_2: 'This value comes from the job level'
+    steps:
+      - name: 'Say Hello World on step 1'
+        shell: bash
+        env:
+          STEP_LEVEL_2: 'This value comes from the step 1'
+        run: |
+          echo "Hello World from Step 1"
+          echo "Workflow Level: $WORKFLOW_LEVEL"
+          echo "Job Level 1: $JOB_LEVEL_1"
+          echo "Job Level 2: $JOB_LEVEL_2"
+          echo "Step 1: $STEP_LEVEL_1"
+          echo "Step 2: $STEP_LEVEL_2"
+      - name: 'Say Lorem Ipsum on step 2'
+        shell: pwsh
+        env:
+          STEP_LEVEL_2: 'This value comes from the step 2'
+        run: |
+          echo "Lorem Ipsum from Step 2"
+          echo "Workflow Level: $env:WORKFLOW_LEVEL"
+          echo "Job Level 1: $env:JOB_LEVEL_1"
+          echo "Job Level 2: $env:JOB_LEVEL_2"
+          echo "Step 1: $env:STEP_LEVEL_1"
+          echo "Step 2: $env:STEP_LEVEL_2"
