Update GHA by adding secrets

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,3 +32,4 @@ jobs: # 어떤 일을 할지를 정의
         run: | 
           echo "STEP 1: ${{ steps.step1.outputs.value1 }}"
           echo "STEP 2: ${{ steps.step2.outputs.value2 }}"
+          echo "SECRET 1: ${{ secrets.SECRET_1 }}"
