Update GHA by control secrets

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,3 +33,9 @@ jobs: # 어떤 일을 할지를 정의
           echo "STEP 1: ${{ steps.step1.outputs.value1 }}"
           echo "STEP 2: ${{ steps.step2.outputs.value2 }}"
           echo "SECRET 1: ${{ secrets.SECRET_1 }}"
+
+          if ("${{ secrets.SECRET_1 }}" -eq "Hello World") {
+            echo "TRUE"
+          } else {
+            echo "FALSE"
+          }
