--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,7 +28,7 @@ jobs: # 어떤 일을 할지를 정의
           echo "::set-output name=value2::$STEP_2"
       
       - name: 'Get values'
-        shell: bash
+        shell: pwsh
         run: | 
           echo "STEP 1: ${{ steps.step1.outputs.value1 }}"
           echo "STEP 2: ${{ steps.step2.outputs.value2 }}"
