--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,10 +12,16 @@ jobs: # 어떤 일을 할지를 정의
     strategy:
       matrix:
         os: [ 'ubuntu-latest', 'windows-latest', 'macos-latest' ]
+        nodejs: [ '14.x', '16.x' ]
 
     runs-on: ${{ matrix.os }}
     steps:
-      - name: 'Say Hello on ${{ matrix.os }}'
+      - name: 'Setup node.js version'
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.nodejs }}
+      
+      - name: 'Check node.js version on ${{ matrix.os }}'
         shell: bash
         run: |
-          echo "Hello from ${{ matrix.os }}"
+          echo "nodejs version: $(node --version)"
