--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,46 +1,79 @@
 # 필수 : name, on, jobs
 name: 'My First GitHub Actions Workflow' # 워크플로우 이름
 
-on: push # [ 'push', 'pull_request' ] # 수행할 이벤트
-
-env: # 환경 변수
-  WORKFLOW_LEVEL: 'This value comes from the workflow level'
+on: # [ 'push', 'pull_request' ] # 수행할 이벤트
+  push:
+    branches:
+    - main
+    tags:
+    - 'v*'
+  pull_request:
+    branches:
+    - main
 
 jobs: # 어떤 일을 할지를 정의
-  build-job: # 이거 하나하나가 하나의 빌드 서버라고 보면 됨
-    name: 'Build Job'
-    #if: github.event_name == 'pull_request'
+  build: # 이거 하나하나가 하나의 빌드 서버라고 보면 됨
+    name: 'Build Apps'
 
     runs-on: ubuntu-latest
     
     steps:
-      - name: 'Say Hello'
+      - name: 'Checkout the repo'
+        uses: actions/checkout@v2
+      
+      - name: 'Setup .NET SDK'
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.x'
+        
+      - name: 'Restore NuGet packages'
         shell: bash
         run: |
-          echo "Hello World"
+          dotnet restore ./api
+      
+      - name: 'Build solution'
+        shell: bash
+        run: |
+          dotnet build ./api -c Release
+
+      - name: 'Create FunctionApp artifact'
+        shell: bash
+        run: |
+          dotnet publish ./api -c Release -o ./api/bin/published
+
+      - name: 'Upload FunctionApp artifact'
+        uses: actions/upload-artifact@v2
+        with:
+          name: apiapp
+          path: api/bin/published
   
-  deploy-to-dev-job:
-    name: 'Deployment Job to DEV'
+  release:
+    name: 'Release Apps'
     needs:
-    - build-job
+    - build
 
     runs-on: ubuntu-latest
     
     steps:
-      - name: 'Say DEV'
+      - name: 'Download FunctionApp artifact'
+        uses: actions/download-artifact@v2
+        with:
+          name: apiapp
+          path: artifacts/api
+      
+      - name: 'Zip FunctionApp artifact'
         shell: bash
         run: |
-          echo "DEVELOPERS"
-  
-  deploy-to-prod-job:
-    name: 'Deployment Job to PROD'
-    needs:
-    - deploy-to-dev-job
+          pushd artifacts/api
+          zip -qq -r apiapp.zip .
+          popd
 
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: 'Say PROD'
-        shell: bash
-        run: |
-          echo "PRODUCTION"
+          mv artifacts/api/apiapp.zip artifacts/apiapp.zip
+      
+      - name: 'Release FunctionApp artifact to GitHub'
+        uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_taken: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            artifacts/apiapp.zip
