--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -71,9 +71,10 @@ jobs: # 어떤 일을 할지를 정의
           mv artifacts/api/apiapp.zip artifacts/apiapp.zip
       
       - name: 'Release FunctionApp artifact to GitHub'
-        uses: "marvinpinto/action-automatic-releases@latest"
+        uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
           prerelease: false
           files: |
             artifacts/apiapp.zip
